Some bug fixes and some changes.

--- a/booking.html
+++ b/booking.html
@@ -220,7 +220,7 @@
 														<a href = "view_booking_details.html" title = "View Booking Details"><i class="fa fa-eye fa-1x" ></i></a>&nbsp;&nbsp;
 														<a href = "javascript:void(0);" title = "Generate Vouchers"><i class="fa fa-file fa-1x" ></i></a>&nbsp;&nbsp;
 														<a href="edit_booking_new.html" title="Edit Booking"><i class="fa fa-pencil-square-o fa-1x"></i></a>&nbsp;&nbsp;
-														<a href="#" title="Delete Booking" onclick=""><i class="fa fa fa-trash-o fa-1x"></i></a>
+														<!-- <a href="#" title="Delete Booking" onclick=""><i class="fa fa fa-trash-o fa-1x"></i></a> -->
 													</td>
                                        </tr>
                                     </table>
