--- a/sub_agent.html
+++ b/sub_agent.html
@@ -328,7 +328,7 @@
 													<a href="booking.html" title="Lists Of Bookings"><i class="fa fa-plane fa-1x"></i></a>&nbsp;&nbsp;
 													<a href="accounting.html" title="Accounting"><i class="fa fa-usd fa-1x"></i></a>&nbsp;&nbsp;
 													<a href="profile.html" title="Edit Agent"><i class="fa fa-pencil-square-o fa-1x"></i></a>&nbsp;&nbsp;
-													<a href="#" title="Delete Agent" onclick=""><i class="fa fa fa-trash-o fa-1x"></i></a>
+													<!-- <a href="#" title="Delete Agent" onclick=""><i class="fa fa fa-trash-o fa-1x"></i></a> -->
 												</td>
 											</tr><tr class="even" role="row">
 												<td class="sorting_1">2</td>
@@ -352,7 +352,7 @@
 													<a href="booking.html" title="Lists Of Bookings"><i class="fa fa-plane fa-1x"></i></a>&nbsp;&nbsp;
 													<a href="accounting.html" title="Accounting"><i class="fa fa-usd fa-1x"></i></a>&nbsp;&nbsp;
 													<a href="profile.html" title="Edit Agent"><i class="fa fa-pencil-square-o fa-1x"></i></a>&nbsp;&nbsp;
-													<a href="#" title="Delete Agent" onclick=""><i class="fa fa fa-trash-o fa-1x"></i></a>
+													<!-- <a href="#" title="Delete Agent" onclick=""><i class="fa fa fa-trash-o fa-1x"></i></a> -->
 												</td>
 											</tr></tbody>
 									</table><div class="dataTables_info" id="example_info" role="status" aria-live="polite">Showing 1 to 2 of 2 entries</div><div class="dataTables_paginate paging_simple_numbers" id="example_paginate"><a class="paginate_button previous disabled" aria-controls="example" data-dt-idx="0" tabindex="0" id="example_previous">Previous</a><span><a class="paginate_button current" aria-controls="example" data-dt-idx="1" tabindex="0">1</a></span><a class="paginate_button next disabled" aria-controls="example" data-dt-idx="2" tabindex="0" id="example_next">Next</a></div></div>
