--- a/index.html
+++ b/index.html
@@ -1,49 +1,79 @@
-<?php
-require_once('loader.inc');
-$white_list_array = array('username', 'password', 'code', 'token', 'btn_login');
-$verify_token = "front_login";
-//print_r($_SESSION['SESSION_DATA']);exit;
-if(isset($_POST['btn_login']))
-{
-	$object_control_center = new front_control();
-	if($object_control_center->front_control_login()) {
-		if(tools::verify_token($white_list_array, $_POST, $verify_token)) {
-				//print_r($_SESSION['SESSION_DATA']);exit;
-			if($_SESSION['SESSION_DATA']['status'] == 1) {
-				header("location:index.php");
-			} else {
-				unset($_SESSION['SESSION_DATA']);
-				$_SESSION['SET_TYPE'] = 'error';
-				$_SESSION['SET_FLASH'] = 'Your account is inactive. Please contact DMC.';
-			}
-		} else {
-			$_SESSION['SET_TYPE'] = 'error';
-			$_SESSION['SET_FLASH'] = 'Access token mismatch. Please reload the page & try again.';
-		}
-	} else {
-		$_SESSION['SET_TYPE'] = 'error';
-		$_SESSION['SET_FLASH'] = 'Invalid Username or Password.';
-	}
-}
-?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title><?php echo DEFAULT_PAGE_TITLE ;?> Destination Management Company</title>	
-<?php require_once('meta.php');?>
-	<!-- JAVASCRIPT CODE -->
-	<script type="text/javascript">
-	<!--
-	$(function(){
-		$("#agent_login").validationEngine();
-	});
-	</script>
-	<!-- JAVASCRIPT CODE -->
+<title>TRIPMAXX - Destination Management Company</title>
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<meta charset="utf-8" />
+	<link rel="icon" href="favicon.png" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/jquery-ui.css">
+	<link rel="stylesheet" href="css/owl.carousel.css">
+	<link rel="stylesheet" href="css/swiper.css">
+	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/mycss.css" />
+	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lora:400,400italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,600,700,800' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway:400,600' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700&amp;subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body class="index-page">
-	<!-- TOP HEADER -->
-	<?php require_once('header.php');?>		
-	<!-- TOP HEADER -->
+	<header id="top">
+		<div class="header-a">
+			<div class="wrapper-padding">
+				<div class="header-phone"><span>+91 33 4032 8888</span></div>
+				<div class="header-account">
+					<a href="#">travel@tripmaxx.in</a>
+				</div>
+				<div class="header-social">
+					<a href="#" class="social-twitter"></a>
+					<a href="#" class="social-facebook"></a>
+					<a href="#" class="social-vimeo"></a>
+					<a href="#" class="social-pinterest"></a>
+					<a href="#" class="social-instagram"></a>
+				</div>
+			</div>
+			<div class="clear"></div>
+		</div>
+		<div class="header-b">
+			<div class="mobile-menu">
+				<nav>
+					<ul>
+						<li><a class="has-child" href="#">HOME</a></li>
+						<li><a class="has-child" href="#">WHO WE ARE</a></li>
+						<li><a class="has-child" href="#">EXPERIENCE DESTINATION</a></li>
+						<li><a class="has-child" href="#">KNOW THE TEAM</a></li>
+						<li><a class="has-child" href="#">CAREER</a></li>
+						<li><a class="has-child" href="#">CONTACT</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="wrapper-padding">
+				<div class="header-logo">
+					<a href="index.html"><img alt="" src="img/logo.png" /></a>
+				</div>
+				<div class="header-right">
+					<a href="#" class="menu-btn"></a>
+					<nav class="header-nav">
+						<ul>
+							<li><a href="#">HOME</a></li>
+							<li><a href="#">WHO WE ARE</a></li>
+							<li><a href="#">EXPERIENCE DESTINATION</a></li>
+							<li><a href="#">KNOW THE TEAM</a></li>
+							<li><a href="#">CAREER</a></li>
+							<li><a href="#">CONTACT</a></li>
+						</ul>
+					</nav>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</div>
+	</header>
+
 	<div class="main-cont">
 		<div class="body-padding">
 			<div class="mp-slider">
@@ -56,7 +86,7 @@ if(isset($_POST['btn_login']))
 										<div class="banner_right_txt">
 											<h2>HANDPICKED CHOICE OF PRODUCTS</h2>
 											<div class="agent_btn">
-												<button class="btn_styl_2 btn3" onclick="window.location.href='<?php echo(DOMAIN_NAME_PATH);?>agent_sign_up.php'"><span>AGENT SIGN UP</span> </button>
+												<button class="btn_styl_2 btn3"><span>AGENT SIGN UP</span> </button>
 												<button class="btn_styl_2"><span>SUPPLIER SIGN UP</span></button>
 											</div>
 										</div>
@@ -64,19 +94,15 @@ if(isset($_POST['btn_login']))
 									<div class="col-md-4 col-sm-6">
 										<div class="select_area">
 											<h3 class="select_area_heading">Agent Partner Login</h3>
-											<form name="agent_login" id="agent_login" method="POST">
-												<div id="notify_msg_div"></div>
-												<div class="select_box">
-													<input type="text" class="styl1 validate[required]" id="code" name="code" placeholder="AGENT CODE" value="<?php echo(isset($_POST['code']) && $_POST['code']!='' ? $_POST['code'] : "");?>" tabindex="1">
-													<input type="text" class="styl1 validate[required]" id="username" name="username" placeholder="YOUR USERNAME" value="<?php echo(isset($_POST['username']) && $_POST['username']!='' ? $_POST['username'] : "");?>" tabindex="2">
-													<input type="password" class="styl1 validate[required]" id="password" name="password" placeholder="YOUR PASSWORD" value="" tabindex="3">
-												</div>
-												<p><a href="agent_forgot_password.php">Forget Password?</a></p>
-												<div class="select_box_btn">
-													<input type="hidden" name="token" value="<?php echo(tools::generateFormToken($verify_token)); ?>" />
-													<button type="submit" class="btn_styl_3 select_area_btn" name="btn_login">LOGIN</button>
-												</div>
-											</form> 
+											<div class="select_box">
+												<input type="text" class="styl1" placeholder="AGENT CODE">
+												<input type="text" class="styl1" placeholder="YOUR USERNAME">
+												<input type="password" class="styl1" placeholder="YOUR PASSWORD">
+											</div>
+											<p><a href="#">Forget Password?</a></p>
+											<div class="select_box_btn">
+												<button class="btn_styl_3 select_area_btn">LOGIN</button>
+											</div>
 										</div>
 									</div>
 									<div class="clearfix"></div>
@@ -87,7 +113,7 @@ if(isset($_POST['btn_login']))
 					<div class="swiper-container" id="swiper-container1">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide slide_height" style="background:url(img/sider-01.jpg)no-repeat center center / cover"> </div>
-							<div class="swiper-slide slide_height" style="background:url(img/sider-02.jpg)no-repeat center center / cover;"> </div>
+							<div class="swiper-slide slide_height" style="background:url(img/sider-02.jpg)no-repeat center center / cover"> </div>
 						</div>
 						<script>
 							var swiper = new Swiper('#swiper-container1', {
@@ -107,6 +133,7 @@ if(isset($_POST['btn_login']))
 					</div>
 				</section>
 			</div>
+
 			<div class="mp-offesr">
 				<div class="wrapper-padding-a" >
 					<div class="offer-slider">
@@ -335,8 +362,167 @@ if(isset($_POST['btn_login']))
 			</div>
 		</div>
 	</div>
-	<!-- FOOTER -->
-	<?php require_once('footer.php');?>
-	<!-- FOOTER -->
+
+	<footer class="footer-a">
+		<div class="wrapper-padding">
+			<div class="container">
+				<div class="row rows">
+					<div class="col-md-6">
+						<div class="row rows">
+							<div class="col-md-6 col-sm-6 col-xs-12">
+								<div class="section">
+									<div class="footer-lbl">Get In Touch</div>
+									<div class="footer-adress">
+										2, Ganesh Chandra Avenue, Commerce House, 1st floor,<br>Kolkata 700013. India.
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 col-sm-6 col-xs-12">
+								<div class="section">
+									<div class="footer-lbl">CONTACT</div>
+									<div class="footer-phones">Telephones: +91 33 4032 8888</div>
+									<div class="footer-email">E-mail: travel@tripmaxx.in</div>
+								</div>
+							</div>
+							<div class="clearfix"></div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<section class="map_sec">
+							<div id="map_canvas" class="google_map" style="position: relative; overflow: hidden;"></div>
+							<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqHRNCLFjL_2XipyaSdSswQUdoWPYU7Rs&amp;callback=initialize" async defer></script> 
+							<script type="text/javascript">
+							<!--
+							/*google map*/
+							var locations = [
+							  ['<img src="image/user.png"  height="auto"  alt="" style="width:100% !important">', 'Acropolis Mall', 'USA', 'Gautam Talukdar', 'Go to office page in order to see all team members', '#', 'images/map1.png'],
+
+							  
+							];
+							var geocoder;
+							var map;
+							//var bounds = new google.maps.LatLngBounds();
+
+							function initialize() {
+							  map = new google.maps.Map(
+								document.getElementById("map_canvas"), {
+								  center: new google.maps.LatLng(22.5726, 88.3639),
+								  zoom: 10,
+								  mapTypeId: google.maps.MapTypeId.ROADMAP
+								});
+							  geocoder = new google.maps.Geocoder();
+
+							  for (i = 0; i < locations.length; i++) {
+								geocodeAddress(locations, i);
+							  }
+
+							}
+
+							//google.maps.event.addDomListener(window, "load", initialize);
+							function geocodeAddress(locations, i) {
+							  var img = locations[i][0];
+							  var address = locations[i][2];
+							  var name = locations[i][3];
+							  var des = locations[i][4];
+							  var url = locations[i][5];
+							  var icon = locations[i][6];
+							  geocoder.geocode({
+								  'address': locations[i][1]
+								},
+								function(results, status) {
+								  if (status == google.maps.GeocoderStatus.OK) {
+									var marker = new google.maps.Marker({
+									  icon: icon,
+									  map: map,
+									  position: results[0].geometry.location,
+									  img: img,
+									  animation: google.maps.Animation.DROP,
+									  address: address,
+									  url: url,
+									  name:name,
+									  des:des
+									})
+									infoWindow(marker, map, img, address, url, name, des);
+									//bounds.extend(marker.getPosition());
+									//map.fitBounds(bounds);
+								  } else {
+									alert("geocode of " + address + " failed:" + status);
+								  }
+								});
+
+							}
+							function infoWindow(marker, map, img, address, url, name, des) {
+							  google.maps.event.addListener(marker, 'click', function() {
+								var html = "<div style='width:290px;'><div style='border:1px solid #ccc; float:left; width:75px'>" + img + "</div><div style='border:0px solid red; float:right; width:205px'><p style='font-size:14px;color:red'>" + address + "</p><p style='font-weight:bold;'>" + name + "</p><p>" + des + "</p></div></div>";
+								iw = new google.maps.InfoWindow({
+								  content: html,
+								  maxWidth: 350
+								});
+								iw.open(map, marker);
+							  });
+							}
+							//-->
+							</script> 
+						</section>
+					</div>
+					<div class="clearfix"></div>
+				</div>
+			</div>
+			<div class="clear"></div>
+		</div>
+	</footer>
+	<footer class="footer-b">
+		<div class="wrapper-padding">
+			<div class="footer-left" style = "text-align:center;">&copy; Copyright 2017 TripMaxx. All rights reserved.</div>
+		</div>
+	</footer> 
+	<script src="http://code.jquery.com/jquery-1.9.1.js"></script> 
+	<script src="js/bootstrap.min.js"></script> 
+	<script src="js/swiper.min.js"></script> 
+	<script src="js/slideInit.js"></script> 
+	<script src="js/jqeury.appear.js"></script> 
+	<script src="js/script.js"></script> 
+	<script src="js/owl.carousel.min.js"></script> 
+	<script src="js/custom.select.js"></script> 
+	<script src="js/jquery-ui.min.js"></script> 
+	<script type="text/javascript" src="js/twitterfeed.js"></script> 
+	<script>
+	$(document).ready(function(){
+		$('.date-inpt').datepicker();
+		$('.custom-select').customSelect();
+		$(function() {
+			$(document.body).on('appear', '.fly-in', function(e, $affected) {
+				$(this).addClass("appeared");
+			});
+			$('.fly-in').appear({force_process: true});
+		});
+
+		$(".owl-slider").owlCarousel({
+			loop:true,
+			margin:28,
+			responsiveClass:true,
+			responsive:{
+		0:{
+			items:1,
+			nav:true
+		},
+		620:{
+			items:2,
+			nav:true
+		},
+		900:{
+			items:3,
+			nav:false
+		},
+		1120:{
+			items:4,
+			nav:true,
+			loop:false
+		}
+	}
+		});
+		$slideHover();
+	});
+	</script>
 </body>
 </html>
